# gemini-code-fixing-agent-demo

./: .gitignore  README.md  call_function.py  main.py  pyproject.toml  requirements.txt  test_run_file.py  tests.py
calculator/: text.txt
functions/: get_file_content.py  get_file_info.py  run_file.py  write_file.py
prompts/: prompts.py
